syntax = "proto3";

package proto.auth;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option go_package = "github.com/goml/gomlet/proto/v1/auth";

/////////////////////////////////////////////////////////////
// Request-Response

// NewUser
message NewUserRequest {
    string user_id = 1;
    string password = 2;
    string name = 3;
    int32 role = 4;
}

message NewUserResponse {
}

// Login
message LoginRequest {
    string user_id = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}


/////////////////////////////////////////////////////////////
// Common

